[project]
name = "ai-benchmark"
version = "0.1.0"
description = "Temporal linting / diff review challenges"
readme = "README.md"
authors = [
    { name = "Dan Davison", email = "dan.davison@temporal.io" }
]
requires-python = ">=3.13"
dependencies = [
    "temporalio>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
